--- a/slide/package.json
+++ b/slide/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "slidev --open",
-    "build": "slidev build",
+    "build": "slidev build --base /wasm-imageprocessing-benchmark/",
     "export": "slidev export"
   },
   "dependencies": {
