後処理の実装

--- a/benchmark/wasm/emscripten/CMakeLists.txt
+++ b/benchmark/wasm/emscripten/CMakeLists.txt
@@ -6,11 +6,12 @@ set(CMAKE_CXX_STANDARD 17)
 set(JS_NAME ${PROJECT_NAME}.js)
 set(JS_SIMD_NAME ${PROJECT_NAME}_simd.js)
 add_link_options(
-  "SHELL:-s INITIAL_MEMORY=38600704"
+  "SHELL:-s INITIAL_MEMORY=91750400"
   "SHELL:-s ALLOW_MEMORY_GROWTH=1"
   "SHELL:-s USE_PTHREADS=0"
   "SHELL:-s MODULARIZE=1"
   "SHELL:-s ASSERTIONS=1"
+  "SHELL:-s DISABLE_EXCEPTION_CATCHING=2"
 )
 file(GLOB sources "*.cc")
 add_executable(${JS_NAME} ${sources})
