--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -21,37 +21,37 @@ RUN apt-get install -y --no-install-recommends \
 RUN git clone https://github.com/emscripten-core/emsdk.git --depth 1
 WORKDIR /emsdk
 # with 2.0.20, building opencv simd version failed...
-RUN ./emsdk install 2.0.14 && ./emsdk activate 2.0.14
+RUN ./emsdk install 2.0.26 && ./emsdk activate 2.0.26
 
 
-### STAGE:tensorflow_builder
-FROM base AS tensorflow_builder
+# ### STAGE:tensorflow_builder
+# FROM base AS tensorflow_builder
 
-RUN curl -fsSL https://bazel.build/bazel-release.pub.gpg | gpg --dearmor > /etc/apt/trusted.gpg.d/bazel.gpg
-RUN echo "deb [arch=amd64] https://storage.googleapis.com/bazel-apt stable jdk1.8" > /etc/apt/sources.list.d/bazel.list
-RUN apt-get update -y && apt-get install -y --no-install-recommends bazel-3.7.2
-RUN ln -s /usr/bin/bazel-3.7.2 /usr/bin/bazel
+# RUN curl -fsSL https://bazel.build/bazel-release.pub.gpg | gpg --dearmor > /etc/apt/trusted.gpg.d/bazel.gpg
+# RUN echo "deb [arch=amd64] https://storage.googleapis.com/bazel-apt stable jdk1.8" > /etc/apt/sources.list.d/bazel.list
+# RUN apt-get update -y && apt-get install -y --no-install-recommends bazel-3.7.2
+# RUN ln -s /usr/bin/bazel-3.7.2 /usr/bin/bazel
 
-### MediaPipe
-WORKDIR /
-RUN git clone https://github.com/google/mediapipe.git -b v0.8.4 --depth 1
+# ### MediaPipe
+# WORKDIR /
+# RUN git clone https://github.com/google/mediapipe.git -b v0.8.4 --depth 1
 
-### Tensorflow
-WORKDIR /
-RUN git clone https://github.com/tensorflow/tensorflow.git tensorflow_src
-RUN git -C /tensorflow_src checkout 9d461da4cb0af2f737bbfc68cca3f6445f1ceb60  # May 15, 2021 latest
+# ### Tensorflow
+# WORKDIR /
+# RUN git clone https://github.com/tensorflow/tensorflow.git tensorflow_src
+# RUN git -C /tensorflow_src checkout 9d461da4cb0af2f737bbfc68cca3f6445f1ceb60  # May 15, 2021 latest
 
-RUN sed -i 's/"crosstool_top": "\/\/external:android\/emscripten"/"crosstool_top": "\/\/emscripten_toolchain\/everything"/' /tensorflow_src/tensorflow/BUILD
+# RUN sed -i 's/"crosstool_top": "\/\/external:android\/emscripten"/"crosstool_top": "\/\/emscripten_toolchain\/everything"/' /tensorflow_src/tensorflow/BUILD
 
-WORKDIR /tflite
-COPY ./tflite/* ./
-RUN bazel build --config wasm -c opt :dummy
-WORKDIR /tflite_build/wasm
-RUN rsync -a -L --include '*/' --include '*.a' --include '*.lo' --include '*.h*' --exclude '*' /tflite/bazel-bin/ ./
-WORKDIR /tflite
-RUN bazel build --config wasm_simd -c opt :dummy
-WORKDIR /tflite_build/wasm_simd
-RUN rsync -a -L --include '*/' --include '*.a' --include '*.lo' --include '*.h*' --exclude '*' /tflite/bazel-bin/ ./
+# WORKDIR /tflite
+# COPY ./tflite/* ./
+# RUN bazel build --config wasm -c opt :dummy
+# WORKDIR /tflite_build/wasm
+# RUN rsync -a -L --include '*/' --include '*.a' --include '*.lo' --include '*.h*' --exclude '*' /tflite/bazel-bin/ ./
+# WORKDIR /tflite
+# RUN bazel build --config wasm_simd -c opt :dummy
+# WORKDIR /tflite_build/wasm_simd
+# RUN rsync -a -L --include '*/' --include '*.a' --include '*.lo' --include '*.h*' --exclude '*' /tflite/bazel-bin/ ./
 
 
 ### STAGE: OpenCV_builder
@@ -59,10 +59,11 @@ FROM base AS opencv_builder
 ENV OPENCV_CONFIG_FLAG="\
   --config_only \
   --emscripten_dir=/emsdk/upstream/emscripten \
-  --cmake_option=-DBUILD_LIST=core,imgproc \
+  --cmake_option=-DBUILD_LIST=core,imgproc,imgcodecs \
+  --cmake_option=-DBUILD_opencv_imgcodecs=ON \
   --cmake_option=-DBUILD_opencv_js=OFF \
-  --cmake_option=-DWITH_PNG=OFF \
-  --cmake_option=-DWITH_JPEG=OFF \
+  --cmake_option=-DWITH_PNG=ON \
+  --cmake_option=-DWITH_JPEG=ON \
   --cmake_option=-DWITH_TIFF=OFF \
   --cmake_option=-DWITH_WEBP=OFF \
   --cmake_option=-DWITH_OPENJPEG=OFF \
@@ -86,14 +87,14 @@ RUN /emsdk/upstream/emscripten/emmake cmake --build /opencv/build_wasm_simd_thre
 
 RUN mkdir -p /opencv_build/wasm && /emsdk/upstream/emscripten/emmake cmake --install /opencv/build_wasm --prefix /opencv_build/wasm
 RUN mkdir -p /opencv_build/wasm_simd && /emsdk/upstream/emscripten/emmake cmake --install /opencv/build_wasm_simd --prefix /opencv_build/wasm_simd
-RUN mkdir -p /opencv_build/wasm_simd_threads && /emsdk/upstream/emscripten/emmake cmake --install /opencv/build_wasm_simd_threads --prefix /opencv_build/wasm_simd_threads
+# RUN mkdir -p /opencv_build/wasm_simd_threads && /emsdk/upstream/emscripten/emmake cmake --install /opencv/build_wasm_simd_threads --prefix /opencv_build/wasm_simd_threads
 
-### STAGE:onnx_builder
-FROM base AS onnx_builder
-WORKDIR /
-RUN git clone https://github.com/microsoft/onnxruntime.git
-WORKDIR /onnxruntime
-RUN python3 tools/ci_build/build.py --build_dir /onnxruntime/build/wasm --build_wasm --enable_wasm_threads --config Release --parallel --skip_tests
+# ### STAGE:onnx_builder
+# FROM base AS onnx_builder
+# WORKDIR /
+# RUN git clone https://github.com/microsoft/onnxruntime.git
+# WORKDIR /onnxruntime
+# RUN python3 tools/ci_build/build.py --build_dir /onnxruntime/build/wasm --build_wasm --enable_wasm_threads --config Release --parallel --skip_tests
 
 ### STAGE:Halide_builder
 FROM base AS halide_builder
@@ -106,12 +107,12 @@ RUN mv Halide-* Halide
 ###
 FROM base AS artifact
 WORKDIR /
-COPY --from=tensorflow_builder /tensorflow_src /tensorflow_src
-COPY --from=tensorflow_builder /tflite_build /tflite_build
-COPY --from=tensorflow_builder /mediapipe /mediapipe
+# COPY --from=tensorflow_builder /tensorflow_src /tensorflow_src
+# COPY --from=tensorflow_builder /tflite_build /tflite_build
+# COPY --from=tensorflow_builder /mediapipe /mediapipe
 COPY --from=opencv_builder /opencv_build /opencv_build
-COPY --from=onnx_builder /onnxruntime /onnxruntime
+# COPY --from=onnx_builder /onnxruntime /onnxruntime
 COPY --from=halide_builder /Halide /Halide
 
-COPY --from=tensorflow_builder /root/.cache /root/.cache
-COPY --from=tensorflow_builder /tflite /tflite
+# COPY --from=tensorflow_builder /root/.cache /root/.cache
+# COPY --from=tensorflow_builder /tflite /tflite
